--- a/app/src/main/res/layout/fragment_animal.xml
+++ b/app/src/main/res/layout/fragment_animal.xml
@@ -31,4 +31,12 @@
         android:text="@string/text_description"
         android:id="@+id/text_description" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_home"
+        android:layout_gravity="bottom|right"
+        android:text="@string/button_home"
+        android:background="@drawable/button_shape" />
+
 </LinearLayout>
